# streamlit-template

./: Dockerfile  README.md  nginx.sampel.conf  pyproject.toml
streamlit_sample/: login.py  requirements.txt
streamlit_sample/.streamlit/: .config.toml
tests/: test_sreamlit_sample.py
