[tool.poetry]
name = "sreamlit-sample"
version = "0.1.0"
description = ""
authors = ["Anonymous mouse <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"
pandas = "^1.4.3"
streamlit-authenticator = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
